--- a/metadata.yaml
+++ b/metadata.yaml
@@ -36,5 +36,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Bible. Psalms -- Commentaries'
 - !lcc 'BS'
+- GITenberg
 title: "The Expositor's Bible: The Psalms, Vol. 2\r\nPsalms XXXIX.-LXXXIX."
 url: http://www.gutenberg.org/ebooks/42488
